# opengl-template

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
include/glad/: glad.h
src/: glad.c
